@@ -1,22 +1,23 @@
-apply plugin: 'java'
 apply plugin: 'application'
 
 buildscript {
     repositories {
         jcenter()
-        maven { url "http://pkg-s2.wikia-prod:81/repository/internal" }
+        maven { url "${archivaUrl}/repository/internal" }
     }
     dependencies {
         classpath 'se.transmode.gradle:gradle-docker:1.2'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.0'
-        classpath 'com.wikia.gradle:marathon:0.4.15'
+        classpath 'com.wikia.gradle:marathon:0.4.16'
     }
 }
 
-version = "0.1.7"
+version = "0.1.11"
 mainClassName = "com.wikia.mobileconfig.MobileConfigApplication"
 
-apply from: 'gradle/deployment.gradle'
+applicationDefaultJvmArgs = ["-Xms100m", "-Xmn128m", "-Xmx300m", "-XX:+UseNUMA", "-XX:+UseCondCardMark", "-XX:+UseBiasedLocking", "-XX:+UseConcMarkSweepGC", "-XX:+UseParNewGC"]
+
+apply from: rootProject.file('gradle/marathon_deployment.gradle')
 apply from: rootProject.file('gradle/pandora_common_deps.gradle')
 
 applicationDistribution.from("mobile-config.yml.sample") {
@@ -24,9 +25,12 @@ applicationDistribution.from("mobile-config.yml.sample") {
     into 'conf'
 }
 
-// In this section you declare the dependencies for your production and test code
+tasks.deployToProd {
+    mem = 1000
+}
+
 dependencies {
-    compile 'com.github.dcshock:consul-rest-client:0.5'
+    compile project(":pandora-core")
 }
 
 run {
